force-app/main/default/objects/FundingAwardAmendment/fields/Payments_are_issued_2_calendar_months__c.field-meta.xml
<CustomField>
    <fullName>Payments_are_issued_2_calendar_months__c</fullName>
    <inlineHelpText>GR confirms aware payments are issued 2 calendar months after drawdown submission date + Phase able to progress on this basis</inlineHelpText>
    <label>XPayments are issued 2 calendar months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>