force-app/main/default/objects/FundingAwardAmendment/fields/Phase_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Phase_Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Baseline of change control record - Phase for phase requests and Award for change control</description>
    <label>Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Change Control Request</relationshipLabel>
    <relationshipName>Change_Control_Request</relationshipName>
    <type>Lookup</type>
</CustomField>