force-app/main/default/objects/FundingAwardAmendment/fields/Phase_Baseline_Name__c.field-meta.xml
<CustomField>
    <fullName>Phase_Baseline_Name__c</fullName>
    <label>Phase Baseline Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>