force-app/main/default/objects/FundingAwardAmendment/fields/Phase_Delivery_Confidence_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Phase_Delivery_Confidence_Assessment__c</fullName>
    <label>Phase Delivery Confidence Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>