force-app/main/default/objects/FundingAwardAmendment/fields/Phase_Request_Linked_to_a_PCR__c.field-meta.xml
<CustomField>
    <fullName>Phase_Request_Linked_to_a_PCR__c</fullName>
    <label>Phase Request Linked to a PCR?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>