force-app/main/default/objects/FundingAwardAmendment/fields/Phase_request_matches_previous_baseline__c.field-meta.xml
<CustomField>
    <fullName>Phase_request_matches_previous_baseline__c</fullName>
    <inlineHelpText>This phase request matches my Phase Request baseline previously submitted and outlined in the GFA.</inlineHelpText>
    <label>Phase request matches previous baseline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>