force-app/main/default/objects/FundingAwardAmendment/fields/Phase_Request_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Phase_Request_Outcome__c</fullName>
    <inlineHelpText>To be completed by T&amp;T (or DESNZ if required) representative once the Phase Request has been reviewed.</inlineHelpText>
    <label>Phase Request Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved - Green</fullName>
            </value>
            <value>
                <fullName>Approved - Amber</fullName>
            </value>
            <value>
                <fullName>Approved - Red</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>