force-app/main/default/objects/FundingAwardAmendment/fields/Phase_Request_Outcome_Justification__c.field-meta.xml
<CustomField>
    <fullName>Phase_Request_Outcome_Justification__c</fullName>
    <label>Phase Request Outcome Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>