force-app/main/default/objects/FundingAwardAmendment/fields/Phase_Request_Version__c.field-meta.xml
<CustomField>
    <fullName>Phase_Request_Version__c</fullName>
    <label>Request Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>