force-app/main/default/objects/FundingAwardAmendment/fields/Please_include_a_justification_of_why_yo__c.field-meta.xml
<CustomField>
    <fullName>Please_include_a_justification_of_why_yo__c</fullName>
    <inlineHelpText>Please include a justification of why you cannot carry over any deviation.</inlineHelpText>
    <label>Justification not carrying over</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>