force-app/main/default/objects/FundingAwardAmendment/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <label>Primary Contractor Name &amp; Organisation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>