force-app/main/default/objects/FundingAwardAmendment/fields/Primary_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>Primary_Suppliers__c</fullName>
    <description>any changes to the table as per section 3B of your DAC form</description>
    <label>Primary Suppliers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>