force-app/main/default/objects/FundingAwardAmendment/fields/PSO_Feedback__c.field-meta.xml
<CustomField>
    <fullName>PSO_Feedback__c</fullName>
    <label>PSO Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>