force-app/main/default/objects/FundingAwardAmendment/fields/PSO_Lead__c.field-meta.xml
<CustomField>
    <fullName>PSO_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSO Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Control_Request2</relationshipName>
    <type>Lookup</type>
</CustomField>