force-app/main/default/objects/FundingAwardAmendment/fields/PSO_Lead_PSO_RAG_Rating_Agreed__c.field-meta.xml
<CustomField>
    <fullName>PSO_Lead_PSO_RAG_Rating_Agreed__c</fullName>
    <formula>IF( TEXT(PSO_RAG_Rating__c) =  TEXT(Lead_PSO_RAG_Rating__c), &quot;Agreed on RAG Rating&quot;, &quot;Not agreed on RAG Rating&quot;)</formula>
    <label>PSO/Lead PSO RAG Rating Agreed?</label>
    <type>Text</type>
</CustomField>