force-app/main/default/objects/FundingAwardAmendment/fields/PSO_RAG_Rating_Applied_By__c.field-meta.xml
<CustomField>
    <fullName>PSO_RAG_Rating_Applied_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSO RAG Rating Applied By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Control_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>