force-app/main/default/objects/FundingAwardAmendment/fields/PSO_RAG_Rating_DELETE__c.field-meta.xml
<CustomField>
    <fullName>PSO_RAG_Rating_DELETE__c</fullName>
    <label>PSO RAG Rating_DELETE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>