force-app/main/default/objects/FundingAwardAmendment/fields/PSO_RAG_Rating_Justification__c.field-meta.xml
<CustomField>
    <fullName>PSO_RAG_Rating_Justification__c</fullName>
    <label>PSO RAG Rating Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>