force-app/main/default/objects/FundingAwardAmendment/fields/Reason_for_Lead_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Lead_Applicant__c</fullName>
    <label>Reason for Lead Applicant</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>