force-app/main/default/objects/FundingAwardAmendment/fields/Reasons_for_delivery_plan_changes__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_delivery_plan_changes__c</fullName>
    <description>In the text field below, please detail the reasons for change to your delivery plan</description>
    <label>Reasons for delivery plan changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>