force-app/main/default/objects/FundingAwardAmendment/fields/Received_signed_GFA_FRA_FMP__c.field-meta.xml
<CustomField>
    <fullName>Received_signed_GFA_FRA_FMP__c</fullName>
    <inlineHelpText>I have received a DESNZ signed copy of my GFA, FRA and FMP and have updated my FRA/FMP based on this phase request, where necessary.</inlineHelpText>
    <label>Received signed GFA, FRA &amp; FMP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>