force-app/main/default/objects/FundingAwardAmendment/fields/Revision_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Revision_Deadline__c</fullName>
    <label>Revision Deadline</label>
    <type>Date</type>
</CustomField>