force-app/main/default/objects/FundingAwardAmendment/fields/Risks_and_Issues_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Risks_and_Issues_Dependencies__c</fullName>
    <label>Risks and Issues Dependencies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>