force-app/main/default/objects/FundingAwardAmendment/fields/Risks_Issues_Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Risks_Issues_Assumptions__c</fullName>
    <label>Risks &amp; Issues Assumptions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>