force-app/main/default/objects/FundingAwardAmendment/fields/Scheme_Lead__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Control_Request3</relationshipName>
    <type>Lookup</type>
</CustomField>