force-app/main/default/objects/FundingAwardAmendment/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <inlineHelpText>The date the Change Control Request was submitted</inlineHelpText>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>