force-app/main/default/objects/FundingAwardAmendment/fields/Time_Period__c.field-meta.xml
<CustomField>
    <fullName>Time_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Phase this record is related to.</description>
    <label>Time Period</label>
    <referenceTo>Time_Period__c</referenceTo>
    <relationshipLabel>Change Control Request</relationshipLabel>
    <relationshipName>Change_Control_Request</relationshipName>
    <type>Lookup</type>
</CustomField>