force-app/main/default/objects/FundingAwardAmendment/fields/Total_co_funding_capital_costs__c.field-meta.xml
<CustomField>
    <fullName>Total_co_funding_capital_costs__c</fullName>
    <description>Total co-funding capital costs to deliver the phase</description>
    <label>Total co-funding capital costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>