force-app/main/default/objects/FundingAwardAmendment/fields/Total_Co_funding_Funding_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Co_funding_Funding_Spend__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Co-funding Funding Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>