force-app/main/default/objects/FundingAwardAmendment/fields/Total_Co_funding_Funding_Spend_App__c.field-meta.xml
<CustomField>
    <fullName>Total_Co_funding_Funding_Spend_App__c</fullName>
    <formula>Phase_Baseline__r.Funding_Award__r.Application__r.Co_Funding_Spend_24_25__c +
Phase_Baseline__r.Funding_Award__r.Application__r.Co_Funding_Spend_25_26__c +
Phase_Baseline__r.Funding_Award__r.Application__r.Co_Funding_Spend_26_27__c +
Phase_Baseline__r.Funding_Award__r.Application__r.Co_Funding_Spend_27_28__c +
Phase_Baseline__r.Funding_Award__r.Application__r.Co_Funding_Spend_28_29__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Co-funding Funding Spend-App</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>