force-app/main/default/objects/FundingAwardAmendment/fields/Total_Drawdown_Forecasted__c.field-meta.xml
<CustomField>
    <fullName>Total_Drawdown_Forecasted__c</fullName>
    <label>Total Drawdown Forecasted</label>
    <summarizedField>Funding_Drawdown_Request_Forecast__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Funding_Drawdown_Request_Forecast__c.Phase_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>