force-app/main/default/objects/FundingAwardAmendment/fields/Total_Energy_Savings_all_FY_Application__c.field-meta.xml
<CustomField>
    <fullName>Total_Energy_Savings_all_FY_Application__c</fullName>
    <formula>Phase_Baseline__r.Funding_Award__r.Application__r.Energy_Savings_24_25__c +
Phase_Baseline__r.Funding_Award__r.Application__r.Energy_Savings_25_26__c +
Phase_Baseline__r.Funding_Award__r.Application__r.Energy_Savings_26_27__c +
Phase_Baseline__r.Funding_Award__r.Application__r.Energy_Savings_27_28__c +
Phase_Baseline__r.Funding_Award__r.Application__r.Energy_Savings_28_29__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Energy Savings all FY(Application)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>