force-app/main/default/objects/FundingAwardAmendment/fields/Total_grant_fundingroll__c.field-meta.xml
<CustomField>
    <fullName>Total_grant_fundingroll__c</fullName>
    <label>Total grant funding</label>
    <summarizedField>Change_Control_Request_Line_Item__c.Total_Grant_Spend__c</summarizedField>
    <summaryForeignKey>Change_Control_Request_Line_Item__c.Change_Control_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>