force-app/main/default/objects/FundingAwardAmendment/fields/Total_homes_upgraded_all_FY__c.field-meta.xml
<CustomField>
    <fullName>Total_homes_upgraded_all_FY__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total homes upgraded all FY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>