force-app/main/default/objects/FundingAwardAmendment/fields/Total_homes_upgraded_all_FY_Application__c.field-meta.xml
<CustomField>
    <fullName>Total_homes_upgraded_all_FY_Application__c</fullName>
    <formula>Phase_Baseline__r.Funding_Award__r.Application__r.No_Of_Homes_24_25__c +
Phase_Baseline__r.Funding_Award__r.Application__r.No_Of_Homes_25_26__c +
Phase_Baseline__r.Funding_Award__r.Application__r.No_Of_Homes_26_27__c +
Phase_Baseline__r.Funding_Award__r.Application__r.No_Of_Homes_27_28__c +
Phase_Baseline__r.Funding_Award__r.Application__r.No_Of_Homes_28_29__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total homes upgraded all FY(Application)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>