force-app/main/default/objects/FundingAwardAmendment/fields/Total_homes_upgraded_to_EPC_C__c.field-meta.xml
<CustomField>
    <fullName>Total_homes_upgraded_to_EPC_C__c</fullName>
    <description>Change to homes upgraded to EPC C for this FY.</description>
    <label>Total homes upgraded to EPC C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>