force-app/main/default/objects/FundingAwardAmendment/fields/Total_Homes_Upgraded_to_EPC_C_all_FY__c.field-meta.xml
<CustomField>
    <fullName>Total_Homes_Upgraded_to_EPC_C_all_FY__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Homes Upgraded to EPC C all FY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>