force-app/main/default/objects/FundingAwardAmendment/fields/Total_Homes_Upgraded_to_EPC_C_all_FY_App__c.field-meta.xml
<CustomField>
    <fullName>Total_Homes_Upgraded_to_EPC_C_all_FY_App__c</fullName>
    <formula>Phase_Baseline__r.Funding_Award__r.Application__r.No_of_Homes_To_EPC_C_24_25__c +
Phase_Baseline__r.Funding_Award__r.Application__r.No_of_Homes_To_EPC_C_25_26__c +
Phase_Baseline__r.Funding_Award__r.Application__r.No_of_Homes_To_EPC_C_26_27__c +
Phase_Baseline__r.Funding_Award__r.Application__r.No_of_Homes_To_EPC_C_27_28__c +
Phase_Baseline__r.Funding_Award__r.Application__r.No_of_Homes_To_EPC_C_28_29__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Homes Upgraded to EPC C all FY-App</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>