force-app/main/default/objects/FundingAwardAmendment/fields/Total_no_homes_with_installs_in_prog__c.field-meta.xml
<CustomField>
    <fullName>Total_no_homes_with_installs_in_prog__c</fullName>
    <inlineHelpText>Total number of homes with installations in progress (started but not yet completed) (KPI 3)</inlineHelpText>
    <label>No. homes with installs in prog (KPI 3)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>