force-app/main/default/objects/FundingAwardAmendment/fields/Total_number_of_homes_to_be_upgraded__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_homes_to_be_upgraded__c</fullName>
    <description>Change to homes being upgraded for this FY.</description>
    <label>Total number of homes to be upgraded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>