force-app/main/default/objects/FundingAwardAmendment/fields/Total_number_of_homes_to_be_upgradedroll__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_homes_to_be_upgradedroll__c</fullName>
    <label>No. of homes to be upgraded</label>
    <summarizedField>Change_Control_Request_Line_Item__c.Total_number_of_homes_to_be_upgraded__c</summarizedField>
    <summaryForeignKey>Change_Control_Request_Line_Item__c.Change_Control_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>