force-app/main/default/objects/FundingAwardAmendment/fields/Total_project_costs_to_deliver_the_phase__c.field-meta.xml
<CustomField>
    <fullName>Total_project_costs_to_deliver_the_phase__c</fullName>
    <label>Total project costs to deliver the phase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>