force-app/main/default/objects/FundingAwardAmendment/fields/Total_project_costsroll__c.field-meta.xml
<CustomField>
    <fullName>Total_project_costsroll__c</fullName>
    <label>Total project costs</label>
    <summarizedField>Change_Control_Request_Line_Item__c.Total_Spend__c</summarizedField>
    <summaryForeignKey>Change_Control_Request_Line_Item__c.Change_Control_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>