force-app/main/default/objects/FundingAwardAmendment/fields/Turner_and_Townsend_Approval__c.field-meta.xml
<CustomField>
    <fullName>Turner_and_Townsend_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To be completed by the delivery partner once the Phase Request has been reviewed.</inlineHelpText>
    <label>Delivery Partner Approval</label>
    <type>Checkbox</type>
</CustomField>