force-app/main/default/objects/FundingAwardAmendment/fields/Turner_and_Townsend_Approval_Contact__c.field-meta.xml
<CustomField>
    <fullName>Turner_and_Townsend_Approval_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Partner Approval Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Change Control Request</relationshipLabel>
    <relationshipName>Change_Control_Request</relationshipName>
    <type>Lookup</type>
</CustomField>