force-app/main/default/objects/FundingAwardAmendment/fields/Updated_my_project_plan_risk_register__c.field-meta.xml
<CustomField>
    <fullName>Updated_my_project_plan_risk_register__c</fullName>
    <inlineHelpText>I have updated my project plan and Risk register in accordance with this Phase Request</inlineHelpText>
    <label>Updated my project plan &amp; risk register</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>