force-app/main/default/objects/FundingAwardAmendment/fields/What_Change_Needs_To_Happen__c.field-meta.xml
<CustomField>
    <fullName>What_Change_Needs_To_Happen__c</fullName>
    <description>Describe the requested change in as much detail as needed to make the request clear for readers. Use a bullet point list for clarity. (max 500 words)</description>
    <label>What Change Needs To Happen</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>