force-app/main/default/objects/FundingAwardAmendment/fields/Why_Change_Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Why_Change_Is_Required__c</fullName>
    <description>Overview of reasons necessitating the change.
(max 500 words)</description>
    <label>Why Change Is Required</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>