force-app/main/default/objects/FundingAwardAmendment/fields/Your_consortium__c.field-meta.xml
<CustomField>
    <fullName>Your_consortium__c</fullName>
    <description>any changes to the table listing consortia members as per your MOU</description>
    <label>Your consortium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>