force-app/main/default/objects/FundingAwardAmendment/recordTypes/Phase_Request.recordType-meta.xml
<RecordType>
    <fullName>Phase_Request</fullName>
    <active>true</active>
    <label>Phase Request</label>
</RecordType>