force-app/main/default/objects/FundingAwardAmendment/recordTypes/SHF_Challenge_Fund.recordType-meta.xml
<RecordType>
    <fullName>SHF_Challenge_Fund</fullName>
    <active>true</active>
    <label>SHF Challenge Fund</label>
</RecordType>