force-app/main/default/objects/FundingAwardAmendment/listViews/All_Phase_Requests_Request.listView-meta.xml
<ListView>
    <fullName>All_Phase_Requests_Request</fullName>
    <columns>Name</columns>
    <columns>RecordType</columns>
    <columns>FundingAward</columns>
    <columns>Phase_Baseline__c</columns>
    <columns>Status</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>FundingAwardAmendment.Phase_Request</value>
    </filters>
    <label>All Phase Requests</label>
</ListView>