force-app/main/default/objects/FundingAwardAmendment/listViews/Approved_Change_Control_Requests.listView-meta.xml
<ListView>
    <fullName>Approved_Change_Control_Requests</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ApprovalStatus</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Change Control Requests</label>
</ListView>