force-app/main/default/objects/FundingAwardAmendment/listViews/Approved_Change_Control_Requests_SHF.listView-meta.xml
<ListView>
    <fullName>Approved_Change_Control_Requests_SHF</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ApprovalStatus</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>FundingAward</field>
        <operation>startsWith</operation>
        <value>SHF</value>
    </filters>
    <label>Approved Change Control Requests - SHF</label>
    <sharedTo>
        <group>Digital_Modus</group>
        <group>SHF_User</group>
    </sharedTo>
</ListView>