force-app/main/default/objects/FundingAwardAmendment/listViews/CCR_Escalated_Change_Panel_Board.listView-meta.xml
<ListView>
    <fullName>CCR_Escalated_Change_Panel_Board</fullName>
    <columns>Name</columns>
    <columns>RecordType</columns>
    <columns>FundingAward</columns>
    <columns>Phase_Baseline__c</columns>
    <columns>Status</columns>
    <columns>PSO_Lead__c</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>notEqual</operation>
        <value>FundingAwardAmendment.Phase_Request</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Escalated Change Panel/Board</value>
    </filters>
    <filters>
        <field>ApprovalStatus</field>
        <operation>equals</operation>
        <value>In Review</value>
    </filters>
    <label>CCR - Escalated Change Panel/Board</label>
</ListView>