force-app/main/default/objects/FundingAwardAmendment/listViews/CCR_Programme_Board_SLT.listView-meta.xml
<ListView>
    <fullName>CCR_Programme_Board_SLT</fullName>
    <columns>Name</columns>
    <columns>RecordType</columns>
    <columns>FundingAward</columns>
    <columns>Phase_Baseline__c</columns>
    <columns>Status</columns>
    <columns>PSO_Lead__c</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>notEqual</operation>
        <value>FundingAwardAmendment.Phase_Request</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Programme Board/SLT</value>
    </filters>
    <filters>
        <field>ApprovalStatus</field>
        <operation>equals</operation>
        <value>In Review</value>
    </filters>
    <label>CCR - Programme Board/SLT</label>
</ListView>