force-app/main/default/objects/FundingAwardAmendment/listViews/Change_Control_Requests_PSO_Review.listView-meta.xml
<ListView>
    <fullName>Change_Control_Requests_PSO_Review</fullName>
    <columns>Name</columns>
    <columns>RecordType</columns>
    <columns>FundingAward</columns>
    <columns>Phase_Baseline__c</columns>
    <columns>Status</columns>
    <columns>PSO_Lead__c</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>notEqual</operation>
        <value>FundingAwardAmendment.Phase_Request</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>PSO initial review</value>
    </filters>
    <filters>
        <field>ApprovalStatus</field>
        <operation>equals</operation>
        <value>In Review</value>
    </filters>
    <label>CCR - PSO Review</label>
</ListView>