force-app/main/default/objects/FundingAwardAmendment/listViews/Phase_Requests_Escalated_to_PSO.listView-meta.xml
<ListView>
    <fullName>Phase_Requests_Escalated_to_PSO</fullName>
    <columns>Name</columns>
    <columns>RecordType</columns>
    <columns>FundingAward</columns>
    <columns>Phase_Baseline__c</columns>
    <columns>Status</columns>
    <columns>PSO_Lead__c</columns>
    <columns>CreatedBy</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>FundingAwardAmendment.Phase_Request</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>In PSO Lead Review</value>
    </filters>
    <label>Phase Requests Escalated to PSO Lead</label>
</ListView>