force-app/main/default/objects/FundingAwardAmendment/listViews/PR_s_8_days_before_end_of_month.listView-meta.xml
<ListView>
    <fullName>PR_s_8_days_before_end_of_month</fullName>
    <columns>Name</columns>
    <columns>FundingAward</columns>
    <columns>Lead_Applicant__c</columns>
    <columns>Phase_Baseline__c</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>In PSO Review,In DESNZ PM Review,Awaiting DESNZ Board Decision</value>
    </filters>
    <filters>
        <field>Eight_days_before_end_of_month__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>FundingAwardAmendment.Phase_Request</value>
    </filters>
    <label>PR&apos;s - 8 days before end of month</label>
</ListView>